k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: raspi-stock
spec:
  selector:
    app: raspi-stock
  ports:
  - name: http
    port: 80
    targetPort: 8080
